# suno-cli

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: BATCH.md  CONFIG.md  USAGE.md
examples/: README.md  batch-simple.yaml  config.yaml  lyrics_example.txt  style_austropop_folk.txt  style_malle_party.md  style_pop.txt  style_schlager.txt
examples/batch/: album_example.yaml  batch-album.yaml  batch-mixed-outputs.yaml  batch-simple.yaml  batch-single-directory.yaml  batch-style-variations.yaml  batch-variations.yaml  batch-with-defaults.yaml  batch-with-output-base.yaml  remote_example.yaml  schlager_album.yaml
examples/style-guides/: austropop_folk.md  metalcore.md
examples/styles/: austropop_party.txt  ballad.txt  death_metal.txt  malle_party.txt  metalcore.txt  schlager_modern.txt
src/suno_cli/: __init__.py  __main__.py  api.py  cli.py  config.py  convert.py  tags.py  youtube.py
